refactor:필드 생성방식을 리플렉션에서 기본 생성자로 변경